# XF_LIMS

./: .gitignore  Standards_Communication.md
AI-Helper/: AI_CONTEXT.md  ARCHITECTURE.md  COLLABORATION_GUIDE.md  ENVIRONMENT.md  Standards_Communication.md  TASK_LOG.md  UI_Guide.md
demo/DI/: DBConnection.h  DIContainer.h  HandlerFactory.h  ICommandHandler.h  UserDAO.h  UserService.h  main.cpp  readme.md
lims_client/: main.py  main.spec  readme.md  requirements.txt
lims_client/common/: constants.py  json_utils.py  tcp_client.py  utils.py
lims_client/config/: config.py
lims_client/controllers/: experiment_controller.py  login_controller.py  sample_controller.py
lims_client/models/: sample.py  tcp_client.py  user.py
lims_client/views/: dashboard_view.py  equipment_view.py  experiment_view.py  login_view.py  main_view.py  main_window.py  sample_view.py  system_admin_view.py
lims_server/: CMakeLists.txt  CmakeList.txt  main.cpp  postgre操作.md  readme.md
lims_server/config/: server.conf
lims_server/include/business/: CommandRouter.h
lims_server/include/business/abstract/: ICommandHandler.h
lims_server/include/business/handler/: ExperimentCreateHandler.h  ExperimentHandler.h  SampleHandler.h  UserLoginHandler.h  UserRegisterHandler.h
lims_server/include/common/: Config.h  DIContainer.h  JsonUtil.h  JwtUtil.h  Logger.h  ProcessResult.h  cryptoUtils.h  pwdCryptoUtils.hpp
lims_server/include/dao/: DBConnection.h  ExperimentDAO.h  SampleDAO.h  UserDAO.h
lims_server/include/model/: Sample.h  User.h
lims_server/include/network/: MessageHandler.h  TcpServer.h
lims_server/include/service/: ExperimentService.h  SampleService.h  UserService.h
lims_server/sql/: init_db.sql  init_db_create.sql
lims_server/src/business/: CommandHandler.cpp
lims_server/src/business/handler/: ExperimentCreateHandler.cpp  ExperimentHandler.cpp  SampleHandler.cpp  UserLoginHandler.cpp  UserRegisterHandler.cpp
lims_server/src/common/: Config.cpp  JsonUtil.cpp  JwtUtil.cpp  Logger.cpp  bcrypt.cpp  blowfish.cpp
lims_server/src/dao/: DBConnection.cpp  ExperimentDAO.cpp  UserDAO.cpp
lims_server/src/network/: MessageHandler.cpp  TcpServer.cpp
lims_server/src/service/: ExperimentService.cpp  SampleService.cpp  UserService.cpp
